Alignment fix

--- a/frontend/src/app/products-table/products-table.component.css
+++ b/frontend/src/app/products-table/products-table.component.css
@@ -30,3 +30,7 @@
 .btn-modify:hover {
     filter: invert(25%);
 }
+
+td p {
+    margin: 0;
+}
